--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -60,6 +60,7 @@
             android:hint="@string/input_telephone"
             android:imeOptions="actionNext"
             android:inputType="phone"
+            android:maxLength="11"
             android:paddingTop="0dp"
             android:paddingBottom="20dp"
             android:textCursorDrawable="@drawable/bg_cursor"
@@ -84,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="@string/get_verify"
-            android:textColor="#FF477BEF"
+            android:textColor="@color/colorGray"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/edit_tellPhone"
@@ -113,6 +114,7 @@
             android:hint="@string/input_verify"
             android:imeOptions="actionNext"
             android:inputType="number"
+            android:maxLength="6"
             android:paddingTop="0dp"
             android:paddingBottom="20dp"
             android:textCursorDrawable="@drawable/bg_cursor"
