--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="18dp"
+        android:padding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
@@ -33,7 +34,7 @@
         android:id="@+id/text_tell"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/input_tell"
         android:textColor="#FFA1A6B3"
         app:layout_constraintStart_toStartOf="@+id/login_fast"
@@ -44,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="16dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,7 +150,7 @@
         android:layout_width="304dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="32dp"
         android:padding="0dp"
         app:layout_constraintStart_toEndOf="@+id/cb_login"
         app:layout_constraintTop_toBottomOf="@+id/input_verify">
