--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="54dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,10 +40,12 @@
             android:hint="@string/input_telephone"
             android:imeOptions="actionNext"
             android:inputType="text"
+            android:maxLength="20"
             android:paddingTop="0dp"
-            android:paddingBottom="24dp"
+            android:paddingBottom="18dp"
             android:textCursorDrawable="@drawable/bg_cursor"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,8 +81,9 @@
             android:hint="@string/input_password"
             android:imeOptions="actionNext"
             android:inputType="textPassword"
+            android:maxLength="20"
             android:paddingTop="0dp"
-            android:paddingBottom="22dp"
+            android:paddingBottom="18dp"
             android:textCursorDrawable="@drawable/bg_cursor"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,38 +105,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
         android:button="@drawable/checkbox_img"
         android:padding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/scroll_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_password" />
+        app:layout_constraintTop_toTopOf="@+id/scroll_text" />
 
-    <ScrollView
+    <TextView
         android:id="@+id/scroll_text"
-        android:layout_width="304dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:padding="0dp"
+        android:layout_marginTop="16dp"
+        android:focusable="false"
+        android:text="@string/deal_front"
+        android:textColor="#FFA1A6B3"
+        android:textSize="12sp"
         app:layout_constraintStart_toEndOf="@+id/cb_register"
-        app:layout_constraintTop_toBottomOf="@+id/frame_password">
-
-        <TextView
-            android:id="@+id/deal_front"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:layout_marginStart="8dp"
-            android:padding="0dp"
-            android:text="@string/deal_front"
-            android:textColor="#FFA1A6B3"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/cb_register"
-            tools:layout_editor_absoluteY="284dp" />
-
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/frame_password" />
 
     <Button
         android:id="@+id/btn_register"
