--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,14 +8,14 @@
 
     <ImageView
         android:id="@+id/image_back"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="18dp"
         android:padding="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_chevron_left_24" />
+        app:srcCompat="@drawable/comp_nav_back" />
 
     <TextView
         android:id="@+id/login_fast"
@@ -45,7 +45,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="16dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +99,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:padding="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +117,7 @@
             android:inputType="number"
             android:maxLength="6"
             android:paddingTop="0dp"
-            android:paddingBottom="20dp"
+            android:paddingBottom="24dp"
             android:textCursorDrawable="@drawable/bg_cursor"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -139,38 +139,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="40dp"
         android:button="@drawable/checkbox_img"
         android:padding="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/scroll_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_verify" />
+        app:layout_constraintTop_toTopOf="@+id/scroll_text" />
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/scroll_text"
-        android:layout_width="304dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:padding="0dp"
+        android:fillViewport="true"
         app:layout_constraintStart_toEndOf="@+id/cb_login"
         app:layout_constraintTop_toBottomOf="@+id/input_verify">
 
         <TextView
             android:id="@+id/deal_front"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            android:layout_marginStart="8dp"
-            android:padding="0dp"
             android:text="@string/deal_front"
             android:textColor="#FFA1A6B3"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cb_register"
-            tools:layout_editor_absoluteY="284dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/btn_login"
