--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,12 +107,12 @@
         android:layout_marginStart="16dp"
         android:button="@drawable/checkbox_img"
         android:padding="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/scroll_text"
+        app:layout_constraintBottom_toBottomOf="@+id/deal_after"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/scroll_text" />
+        app:layout_constraintTop_toTopOf="@+id/deal_after" />
 
     <TextView
-        android:id="@+id/scroll_text"
+        android:id="@+id/deal_after"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -139,7 +139,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scroll_text" />
+        app:layout_constraintTop_toBottomOf="@+id/deal_after" />
 
     <TextView
         android:id="@+id/note"
