--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,13 +11,13 @@
         android:id="@+id/text_login"
         android:layout_width="32dp"
         android:layout_height="22dp"
-        android:layout_marginTop="13dp"
         android:layout_marginEnd="16dp"
         android:text="@string/text_login"
         android:textColor="#FF477BEF"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/image_close"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/image_close" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame_username"
@@ -181,8 +181,8 @@
         android:id="@+id/image_close"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/mistake" />
@@ -192,7 +192,7 @@
         android:layout_width="240dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="42dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_close"
         app:srcCompat="@drawable/welcome" />
