--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -133,6 +133,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_selector"
+        android:clickable="false"
         android:stateListAnimator="@null"
         android:text="@string/btn_register"
         android:textColor="#FFFFFF"
