--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -132,7 +132,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_selector"
+        android:background="@drawable/btn_normal"
         android:clickable="false"
         android:stateListAnimator="@null"
         android:text="@string/btn_register"
