--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -178,7 +178,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/button_selector"
+        android:background="@drawable/btn_normal"
         android:stateListAnimator="@null"
         android:text="@string/button_next"
         android:textColor="@drawable/button_font_normal"
