--- a/app/src/main/res/drawable-v21/ripple_bg.xml
+++ b/app/src/main/res/drawable-v21/ripple_bg.xml
@@ -4,6 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="#FFC730" />
+            <corners android:radius="4dp" />
         </shape>
     </item>
 </ripple>
