--- a/app/src/main/res/drawable/ripple_bg.xml
+++ b/app/src/main/res/drawable/ripple_bg.xml
@@ -5,6 +5,7 @@
         <shape>
             <!--背景色-->
             <solid android:color="#E6AC0C" />
+            <corners android:radius="4dp" />
         </shape>
     </item>
 
@@ -13,6 +14,7 @@
         <shape>
             <!-- 背景色 -->
             <solid android:color="#FFC730" />
+            <corners android:radius="4dp" />
         </shape>
     </item>
 
