解决按钮点击事件和验证码提醒设置

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorGray">#FFA1A6B3</color>
     <color name="colorWhite">#00000000</color>
     <color name="colorDark">#000000</color>
+    <color name="colorBasicWhite">#ffffff</color>
+    <color name="colorAutoDismissToast">#88000000</color>
 </resources>
